<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".login.MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_reparacion"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:background="@drawable/custom_border"
        android:gravity="center">

        <!-- Campo de texto de entrada con TextInputEditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar_email"


            app:boxStrokeColor="@color/naranja"
            app:counterTextColor="@color/azul"
            app:cursorColor="@color/azul"
            app:cursorErrorColor="@color/naranja"

            app:endIconTint="@color/azul"
            app:hintTextColor="@color/azul"

            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="8dp"

                android:textColor="@color/azul"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar_password"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:boxStrokeColor="@color/naranja"
            app:counterTextColor="@color/azul"
            app:cursorColor="@color/azul"
            app:cursorErrorColor="@color/naranja"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/azul"
            app:hintTextColor="@color/azul"

            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassoword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:padding="8dp"

                android:textColor="@color/azul"
                android:drawableStart="@drawable/candado"
                android:drawablePadding="10dp"
                android:inputType="numberPassword"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_ingresar"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/ingresar"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/naranja" /> <!-- Cambia @color/naranja al color que desees -->

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="0dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salir"
                android:backgroundTint="@color/azul" /> <!-- Cambia @color/naranja al color que desees -->

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
